force-app/main/default/objects/Calling_Campaign_Product__c/Calling_Campaign_Product__c.object-meta.xml
<CustomObject>
    <description>Product list for Calling Campaign only</description>
    <label>Calling Campaign Product</label>
    <nameField>
        <label>Calling Campaign Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calling Campaign Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>