force-app/main/default/objects/Calling_Campaign_Product__c/fields/Order_Awaiting_Roll_up__c.field-meta.xml
<CustomField>
    <fullName>Order_Awaiting_Roll_up__c</fullName>
    <description>Roll up of all awaiting orders of Calling Campaign products</description>
    <label>Order Awaiting Roll up</label>
    <summaryFilterItems>
        <field>Calling_Campaign_Order__c.Status__c</field>
        <operation>equals</operation>
        <value>Awaiting</value>
    </summaryFilterItems>
    <summaryForeignKey>Calling_Campaign_Order__c.Calling_Campaign_Product__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>