force-app/main/default/objects/Calling_Campaign_Product__c/fields/Order_Roll_up__c.field-meta.xml
<CustomField>
    <fullName>Order_Roll_up__c</fullName>
    <label>Order Roll up</label>
    <summaryForeignKey>Calling_Campaign_Order__c.Calling_Campaign_Product__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>