force-app/main/default/objects/Calling_Campaign_Product__c/fields/Product_small_Image__c.field-meta.xml
<CustomField>
    <fullName>Product_small_Image__c</fullName>
    <formula>IMAGE($Setup.ProductSettings__c.BccLargePictureUrl__c + &apos;louis-vuitton--&apos; + Sku_Number__c + &apos;_PM2_Front%20view.jpg?wid=100&apos;, &apos;No Image&apos;, 100, 100 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product small Image</label>
    <type>Text</type>
</CustomField>