force-app/main/default/objects/Calling_Campaign_Product__c/fields/SAP_Stock__c.field-meta.xml
<CustomField>
    <fullName>SAP_Stock__c</fullName>
    <description>Stock provided by SAP</description>
    <label>SAP Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>