force-app/main/default/objects/Calling_Campaign_Product__c/fields/Sku_Number__c.field-meta.xml
<CustomField>
    <fullName>Sku_Number__c</fullName>
    <externalId>true</externalId>
    <label>Sku Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>