force-app/main/default/objects/Calling_Campaign_Product__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the Available Stock</description>
    <formula>IF( Stock_Available__c &gt; 1, &quot;Available&quot;, &quot;Not Available&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>