force-app/main/default/objects/Calling_Campaign_Product__c/fields/Stock_Available__c.field-meta.xml
<CustomField>
    <fullName>Stock_Available__c</fullName>
    <formula>SAP_Stock__c -   Order_Awaiting_Roll_up__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>