force-app/main/default/objects/Calling_Campaign_Product__c/listViews/Calling_Campaign_Products_Available.listView-meta.xml
<ListView>
    <fullName>Calling_Campaign_Products_Available</fullName>
    <columns>NAME</columns>
    <columns>Sku_Number__c</columns>
    <columns>Model__c</columns>
    <columns>Product_small_Image__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </filters>
    <label>Calling Campaign Products Available</label>
</ListView>